--- a/src/styling/style.scss
+++ b/src/styling/style.scss
@@ -2953,13 +2953,7 @@ body {
             }
 
 
-
             .console {
-
-                    
-
-
-
                 position: absolute;
                 display: grid;
                 height: calc(100% - 30px);
@@ -2969,67 +2963,161 @@ body {
                 left: 15px;     
                 border-radius: 4px;
                 overflow: hidden;
-                
-                grid-template-rows: 20px 20px 50px 15px auto 15px;
-                grid-template-columns: 15px 40px 1fr 1fr 40px 15px;
-                grid-template-areas: 
-                    "progress progress progress progress progress progress" 
-                    "gapL consoleTitle consoleTitle consoleTime consoleTime gapR" 
-                    "gapL consoleSidebarBtn consoleTabs consoleTabs consoleHelpBtn gapR" 
-                    "gapL gapT gapT gapT gapT gapR" 
-                    "gapL consoleSidebarTabs consoleSidebar consoleHelp consoleHelpTabs gapR" 
-                    "gapL gapB gapB gapB gapB gapR";
-
-
-                div {
-                    display: grid;
+                grid-template-rows: 105px auto;
+                grid-template-areas: "consoleHeader" "consoleBody";
+                .consoleHeader  {
                     width: 100%;
-                    height: 100%;
-                    &:nth-child(1)  {
+                    grid-area: consoleHeader;
+                    position: absolute;
+                    background-color: red;
+                    display: grid;
+                    grid-template-rows: 20px 40px 45px;
+                    grid-template-columns: 15px 40px 1fr 1fr 40px 15px;
+                    grid-template-areas: 
+                        "gapL progress progress progress progress gapR"
+                        "gapL sidebarBtn consoleTitle consoleTime helpBtn gapR"
+                        "consoleTabs consoleTabs consoleTabs consoleTabs consoleTabs consoleTabs";
+                    button {
+                        height: 30px;
+                        width: 30px;
+                        margin: 5px;
+                        border: none;
+                        border-radius: 4px;
+                        cursor: pointer;
+                    }
+                    div:nth-child(1) {
+                        border-radius: 8px;
+                        width: 100%;
+                        height: 15px;
+                        margin-top: 5px;
                         grid-area: progress;
-                        background-color: red;
+                        background-color: black;
                     }
-                    &:nth-child(2)  {
+                    button:nth-child(2) {
+                        grid-area: sidebarBtn;
+                    }
+                    div:nth-child(3) {
                         grid-area: consoleTitle;
-                        background-color: orange;
+                        // background-color: orangered;
+                        height: 30px;
+                        margin: 5px 0 0 5px;
+                        font-size: 14px;
+                        font-weight: 700;
+                        letter-spacing: 1px;
+                        text-transform: uppercase;
+                        color: white;
                     }
-                    &:nth-child(3)  {
+                    div:nth-child(4) {
                         grid-area: consoleTime;
-                        background-color: yellow;
+                        text-transform: uppercase;
+                        // background-color: gray;
+                        margin: 5px 5px 0 0;
+                        height: 30px;
+                        text-align: right;
+                        font-size: 14px;
+                        font-weight: 700;
+                        letter-spacing: 1px;
+                        color: white;
                     }
-                    &:nth-child(4)  {
+                    button:nth-child(5) {
+                        grid-area: helpBtn;
+                    }
+                    div:nth-child(6) {
                         grid-area: consoleTabs;
-                        background-color: green;
+                        overflow-y: hidden;
+                        overflow-x: auto;
+                        button {
+                            border-radius: 4px 4px 0 0;
+                            margin: 15px 0 0 10px;
+                            height: 30px;
+                            width: min-content;
+                            padding: 0 15px;
+                            background-color: white;
+                            display: inline-block;
+                            flex: auto;
+                            font-weight: 700;
+                            transition: height .5s, margin .5s;
+                            text-transform: uppercase;
+
+                            &:hover {
+                                height: 45px;
+                                margin: 0 0 0 10px;
+                            }
+                        }
+                        &::-webkit-scrollbar {appearance: none; height: 0;}
                     }
-                    &:nth-child(5)  {
-                        grid-area: consoleSidebar;
-                        background-color: blue;
-                    }
-                    &:nth-child(6)  {
-                        grid-area: consoleSidebarTabs;
-                        background-color: lightblue;
-                    }
-                    &:nth-child(7)  {
-                        grid-area: consoleHelp;
+                }
+                .consoleBody  {
+                    width: calc(100% - 40px);
+                    height: calc(100% - 40px);
+                    margin: 20px;
+                    grid-area: consoleBody;
+                    position: absolute;
+        
+                    .consoleSidebar {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        height: 100%;
+                        width: 350px;
                         background-color: purple;
                     }
-                    &:nth-child(8)  {
-                        grid-area: consoleHelpTabs;
-                        background-color: indigo;
-                    }
-                    &:nth-child(9)  {
-                        display: grid;
-                        display: none;
+                    .consoleHelp {
                         position: absolute;
-                        bottom: 10px;
-                        right: 10px;
-                        background-color: gray;
-                        width: calc(100% - 20px);
-                        height: calc(100% - 110px);
+                        bottom: 0;
+                        right: 0;
+                        height: 100%;
+                        width: 350px;
+                        background-color: blue;
+                    }
+                }
+                .consoleDesk {
+                    display: grid;
+                    // display: none;
+                    grid-area: consoleBody;
+                    background-color: green;
+                    position: absolute;
+                    height: calc(100% - 20px);
+                    width: calc(100% - 20px);
+                    margin: 10px;
+                    border-radius: 4px;
+        
+                    grid-template-rows: 20px 40px auto 10px;
+                    grid-template-columns: 10px 5fr 4fr 10px;
+                    grid-template-areas: 
+                        "gapL progress progress gapR"
+                        "gapL deskBtnsL deskBtnsR gapR"
+                        "gapL deskContent deskContent gapR"
+                        "gapL deskView deskView gapR";
+                    section:nth-child(1) {
+                        grid-area: progress;
+                        background-color: black;
+                        height: 10px;
+                        border-radius: 4px;
+                        margin-top: 10px;
+                    }
+                    section:nth-child(2) {
+                        grid-area: deskBtnsL;
+                        background-color: blue;
+                        height: 30px;
+                        margin: 5px 0;
+                    }
+                    section:nth-child(3) {
+                        grid-area: deskBtnsR;
+                        background-color: yellow;
+                        height: 30px;
+                        margin: 5px 0;
+                    }
+                    section:nth-child(4) {
+                        grid-area: deskContent;
+                        background-color: rgb(234, 234, 234);
+                        border-radius: 4px;
+                        
                     }
                 }
             }
         }
+
         // &.primaryInterfaceInactive {
     
         //     .socialConsole {
@@ -3150,8 +3238,8 @@ body {
         //         }
         //     }
         // }
-    }
 
+    }
 
 
 }
