--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -2330,7 +2330,7 @@ body {
   left: 15px;
   border-radius: 4px;
   overflow: hidden;
-  grid-template-rows: 105px auto;
+  grid-template-rows: 115px auto;
   grid-template-areas: "consoleHeader" "consoleBody";
 }
 .interfaceContainer main .mainscreen .console .consoleHeader {
@@ -2339,23 +2339,23 @@ body {
   position: absolute;
   background-color: red;
   display: grid;
-  grid-template-rows: 20px 40px 45px;
+  grid-template-rows: 25px 45px 45px;
   grid-template-columns: 15px 40px 1fr 1fr 40px 15px;
   grid-template-areas: "gapL progress progress progress progress gapR" "gapL sidebarBtn consoleTitle consoleTime helpBtn gapR" "consoleTabs consoleTabs consoleTabs consoleTabs consoleTabs consoleTabs";
 }
 .interfaceContainer main .mainscreen .console .consoleHeader button {
   height: 30px;
   width: 30px;
-  margin: 5px;
+  margin: 10px 5px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
 .interfaceContainer main .mainscreen .console .consoleHeader div:nth-child(1) {
-  border-radius: 8px;
+  border-radius: 4px;
   width: 100%;
   height: 15px;
-  margin-top: 5px;
+  margin-top: 10px;
   grid-area: progress;
   background-color: black;
 }
@@ -2365,7 +2365,7 @@ body {
 .interfaceContainer main .mainscreen .console .consoleHeader div:nth-child(3) {
   grid-area: consoleTitle;
   height: 30px;
-  margin: 5px 0 0 5px;
+  margin: 10px 0 0 5px;
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 1px;
@@ -2375,7 +2375,7 @@ body {
 .interfaceContainer main .mainscreen .console .consoleHeader div:nth-child(4) {
   grid-area: consoleTime;
   text-transform: uppercase;
-  margin: 5px 5px 0 0;
+  margin: 10px 5px 0 0;
   height: 30px;
   text-align: right;
   font-size: 14px;
@@ -2393,8 +2393,8 @@ body {
 }
 .interfaceContainer main .mainscreen .console .consoleHeader div:nth-child(6) button {
   border-radius: 4px 4px 0 0;
-  margin: 15px 0 0 10px;
-  height: 30px;
+  margin: 10px 0 0 10px;
+  height: 35px;
   width: -moz-min-content;
   width: min-content;
   padding: 0 15px;
@@ -2424,10 +2424,10 @@ body {
 .interfaceContainer main .mainscreen .console .consoleBody .consoleSidebar {
   position: absolute;
   top: 0;
-  left: 0;
   height: 100%;
   width: 350px;
   background-color: purple;
+  transition: left 1s;
 }
 .interfaceContainer main .mainscreen .console .consoleBody .consoleHelp {
   position: absolute;
@@ -2436,6 +2436,7 @@ body {
   height: 100%;
   width: 350px;
   background-color: blue;
+  transition: right 1s;
 }
 .interfaceContainer main .mainscreen .console .consoleDesk {
   display: grid;
@@ -2446,33 +2447,43 @@ body {
   width: calc(100% - 20px);
   margin: 10px;
   border-radius: 4px;
-  grid-template-rows: 20px 40px auto 10px;
+  top: 0;
+  transition: top 1.5s;
+  grid-template-rows: 25px 40px auto 10px;
   grid-template-columns: 10px 5fr 4fr 10px;
   grid-template-areas: "gapL progress progress gapR" "gapL deskBtnsL deskBtnsR gapR" "gapL deskContent deskContent gapR" "gapL deskView deskView gapR";
 }
 .interfaceContainer main .mainscreen .console .consoleDesk section:nth-child(1) {
   grid-area: progress;
   background-color: black;
-  height: 10px;
+  width: 100%;
+  height: 15px;
   border-radius: 4px;
   margin-top: 10px;
 }
 .interfaceContainer main .mainscreen .console .consoleDesk section:nth-child(2) {
   grid-area: deskBtnsL;
-  background-color: blue;
+  width: 100%;
   height: 30px;
   margin: 5px 0;
 }
 .interfaceContainer main .mainscreen .console .consoleDesk section:nth-child(3) {
   grid-area: deskBtnsR;
-  background-color: yellow;
   height: 30px;
+  width: 100%;
   margin: 5px 0;
 }
 .interfaceContainer main .mainscreen .console .consoleDesk section:nth-child(4) {
   grid-area: deskContent;
   background-color: rgb(234, 234, 234);
   border-radius: 4px;
+  width: 100%;
+}
+.interfaceContainer main .mainscreen .consoleSidebarOpen .consoleSidebar {
+  left: 0;
+}
+.interfaceContainer main .mainscreen .consoleSidebarClosed .consoleSidebar {
+  left: -400px;
 }
 
 @media only screen and (min-width: 0px) {
@@ -2884,12 +2895,6 @@ body {
   #temporaryHeightIndicator {
     background: hsl(0, 70%, 60%);
   }
-  .oldConsoleHelpOpen .oldConsoleSidebarContent {
-    height: calc(30% - 14px);
-  }
-  .oldConsoleHelpOpen .oldConsoleSidebarHelp {
-    height: calc(70% - 6px);
-  }
 }
 @media only screen and (min-height: 300px) {
   #temporaryHeightIndicator {
@@ -2900,22 +2905,10 @@ body {
   #temporaryHeightIndicator {
     background: hsl(30, 70%, 60%);
   }
-  .oldConsoleHelpOpen .oldConsoleSidebarContent {
-    height: calc(40% - 14px);
-  }
-  .oldConsoleHelpOpen .oldConsoleSidebarHelp {
-    height: calc(60% - 6px);
-  }
 }
 @media only screen and (min-height: 900px) {
   #temporaryHeightIndicator {
     background: hsl(30, 70%, 30%);
-  }
-  .oldConsoleHelpOpen .oldConsoleSidebarContent {
-    height: calc(50% - 14px);
-  }
-  .oldConsoleHelpOpen .oldConsoleSidebarHelp {
-    height: calc(50% - 6px);
   }
 }
 @media only screen and (min-height: 1200px) {
@@ -2926,12 +2919,6 @@ body {
 @media only screen and (min-height: 1500px) {
   #temporaryHeightIndicator {
     background: hsl(102, 70%, 30%);
-  }
-  .oldConsoleHelpOpen .oldConsoleSidebarContent {
-    height: calc(60% - 14px);
-  }
-  .oldConsoleHelpOpen .oldConsoleSidebarHelp {
-    height: calc(40% - 6px);
   }
 }
 @media only screen and (min-height: 1800px) {
@@ -2957,361 +2944,5 @@ body {
 @media only screen and (min-height: 3000px) {
   #temporaryHeightIndicator {
     background-color: rgb(0, 0, 0);
-  }
-}
-@media only screen and (min-height: 300px) and (min-width: 300px) {
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-}
-@media only screen and (min-height: 600px) and (min-width: 600px) {
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-}
-@media only screen and (min-height: 900px) and (min-width: 900px) {
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-}
-@media only screen and (min-height: 1200px) and (min-width: 1200px) {
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-}
-@media only screen and (min-height: 1500px) and (min-width: 1500px) {
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk .helpDeskChat .helpDeskChatContent {
-    height: calc(50% - 6px);
-    width: calc(100% - 8px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk .helpDeskChat .helpDeskChatContent header {
-    height: calc(100% - 8px);
-    width: calc(50% - 6px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk .helpDeskChat .helpDeskChatContent section {
-    height: calc(100% - 8px);
-    width: calc(50% - 6px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk .helpDeskChat .helpDeskChatTool {
-    height: calc(50% - 6px);
-    width: calc(100% - 8px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-}
-@media only screen and (min-height: 1800px) and (min-width: 1800px) {
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-}
-@media only screen and (min-height: 2100px) and (min-width: 2100px) {
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-}
-@media only screen and (min-height: 2400px) and (min-width: 2400px) {
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-}
-@media only screen and (min-height: 2700px) and (min-width: 2700px) {
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-}
-@media only screen and (min-height: 3000px) and (min-width: 3000px) {
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .primaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleDesk {
-    height: calc(100% - 16px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarClosed div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleDesk {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
-  }
-  .interfaceContainer .secondaryInterface .oldConsoleSidebarOpen div .oldConsoleSidebar {
-    height: calc(50% - 14px);
-    width: calc(100% - 16px);
   }
 }/*# sourceMappingURL=style.css.map */
